Fixing Text Cropping in cards

--- a/static/blog/css/main.css
+++ b/static/blog/css/main.css
@@ -1858,7 +1858,7 @@ input, select, textarea {
 		background-position: calc(100% - 1em) center;
 		height: 2.75em;
 		padding-right: 2.75em;
-		text-overflow: ellipsis;
+		fverflow: ellipsis;
 	}
 
 		select option {
